--- a/css/base.css
+++ b/css/base.css
@@ -22,7 +22,7 @@ header {
 
 header h1 {
     float: left;
-    font-family: helvetica, arial, sans-serif;
+    font-family: georgia, arial, sans-serif;
     font-size: 22px;
     font-weight: 500;
     padding: 10px;
@@ -50,6 +50,7 @@ header a:active {
 header a:focus {}
 
 article {
+    background-color: #fffff0;
     clear: both;
     padding: 0 10px 0 10px;
 }
