--- a/css/base.css
+++ b/css/base.css
@@ -6,13 +6,14 @@
 
 body {
     font-family: georgia, serif;
-    font-size 16px;
+    font-size 20px;
     line-height: 24px;
 }
 
-img {
+p img {
     float: left;
-    padding: 10px;
+    padding: 5px 10px 5px 10px;
+    height: 300px
 }
 
 p {
@@ -69,6 +70,10 @@ article h2 {
     font-size: 24px;
     line-height: 28px;
     margin-bottom: 4px;
+}
+
+article p {
+    font-size: 17px;
 }
 
 footer {
