--- a/css/base.css
+++ b/css/base.css
@@ -5,9 +5,14 @@
 }
 
 body {
-    font-family: georgia, serif;
+    font-family: cambria, serif;
     font-size 20px;
     line-height: 24px;
+}
+
+#main {
+    max-width: 1000px;
+    margin: 0 auto; 
 }
 
 p img {
@@ -28,7 +33,7 @@ header {
 
 header h1 {
     float: left;
-    font-family: georgia, arial, sans-serif;
+    font-family: cambria, serif;
     font-size: 22px;
     font-weight: 500;
     padding: 10px;
@@ -40,7 +45,7 @@ header nav {
 }
 
 header a {
-    color: #aaaaaa;
+    color: #ffffff;
     margin-right: 20px;
     text-decoration: none;
 }
@@ -48,7 +53,7 @@ header a {
 header a:link {}
 header a:visited {}
 header a:hover {
-    color: #ffffff;
+    color: #00ccff;
 }
 header a:active {
     text-decoration: underline;
