--- a/css/base.css
+++ b/css/base.css
@@ -50,15 +50,13 @@ header a {
     text-decoration: none;
 }
 
-header a:link {}
-header a:visited {}
 header a:hover {
     color: #00ccff;
 }
+
 header a:active {
     text-decoration: underline;
 }
-header a:focus {}
 
 article {
     clear: both;
@@ -81,6 +79,10 @@ article h2 {
 article p {
     font-size: 17px;
 }
+
+ul {
+    padding: 0px 30px 0px;
+}    
 
 footer {
     padding: 5px;
