--- a/css/base.css
+++ b/css/base.css
@@ -18,7 +18,7 @@ body {
 p img {
     float: left;
     padding: 5px 10px 5px 10px;
-    height: 300px
+    width: 30%
 }
 
 p {
@@ -78,6 +78,10 @@ article h2 {
 
 article p {
     font-size: 17px;
+}
+
+h1 img {
+    width: 100%;
 }
 
 ul {
