--- a/css/base.css
+++ b/css/base.css
@@ -88,9 +88,15 @@ iframe {
     width: 100%;
 }
 
+a img {
+    width: 45px; 
+}
+
 ul {
     padding: 0px 30px 0px;
 }    
+
+
 
 footer {
     clear: both;
@@ -144,6 +150,11 @@ article p {
 article ul {
         text-align: center;
         font-size: 14px;
+}
+
+a img {
+        align-content:center;
+        padding: 0px;
 }
         
 }
