--- a/css/base.css
+++ b/css/base.css
@@ -89,7 +89,7 @@ iframe {
 }
 
 a img {
-    width: 45px; 
+    width: 50px; 
 }
 
 ul {
@@ -97,6 +97,9 @@ ul {
 }    
 
 
+img {
+    width: 50%;
+}
 
 footer {
     clear: both;
@@ -151,10 +154,11 @@ article ul {
         text-align: center;
         font-size: 14px;
 }
-
-a img {
-        align-content:center;
-        padding: 0px;
+    
+img.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
         
 }
