--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,5 @@
 * {
-    box-sizing: boreder-box;
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -112,7 +112,6 @@ footer {
 footer h1 {
     text-align: center;
     font-size: 12px;
-    float: center;
     font-weight: 500;
 }
 
